--- a/src/mainpage.scss
+++ b/src/mainpage.scss
@@ -1,16 +1,14 @@
-.user-image-section {
+.user-image-container {
   padding-top: 4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #fff0c9;
   font-family: 'Poppins', sans-serif;
-  width: 100vw;
 
   .current-matches {
-    width: 100vw;
+    width: 100%;
     align-self: flex-start;
-    // padding-left: 2rem;
     background-color: $primary-black;
     color: $primary-mustard;
     box-shadow: 0px 0.5px 5px $primary-black;
@@ -87,7 +85,7 @@
   margin: 0;
 }
 
-.about-section {
+.about-section-container {
   padding: 1rem;
   background-color: #d6d6d6;
   color: $primary-black;
@@ -109,7 +107,15 @@
   }
 }
 
-.meme-section {
+.meme-section-container {
   padding: 1rem;
   color: $primary-black;
+}
+
+.meme {
+  height: 14rem;
+  border: 1px solid $primary-black;
+  border-radius: 10px;
+  padding: 0;
+  margin: 0;
 }
